grammar.js
    source_file: $ => seq(
      optional($.shebang_line),
      repeat($.file_annotation),
      optional($.package_header),
      optional($.import_list),
      repeat(seq($._statement, $._semi))
    ),

    import_list: $ => repeat1($.import_header),

    import_header: $ => seq(
      "import",
      alias($._import_identifier, $.identifier),
      optional(choice(seq($._import_dot, $.wildcard_import), $.import_alias)),
      $._semi
    ),

    class_declaration: $ => prec.dynamic(1, prec.right(choice(
      seq(
        optional($.modifiers),
        choice("class", seq(optional("fun"), "interface")),
        alias($.simple_identifier, $.type_identifier),
        optional($.type_parameters),
        optional($.primary_constructor),
        optional(seq(":", $._delegation_specifiers)),
        optional($.type_constraints),
        optional($.class_body)
      ),
      seq(
        optional($.modifiers),
        // The hint marks 'enum' as a pending declaration prefix so the ASI
        // scanner does not split 'enum class' with a _same_line_boundary;
        // see the modifiers rule.
        "enum", optional($._modifier_run_hint), "class",
        alias($.simple_identifier, $.type_identifier),
        optional($.type_parameters),
        optional($.primary_constructor),
        optional(seq(":", $._delegation_specifiers)),
        optional($.type_constraints),
        optional($.enum_class_body)
      )
    ))),

    binding_pattern_kind: $ => choice("val", "var"),

    _delegation_specifiers: $ => prec.left(sep1(
      $.delegation_specifier,
      // $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
      ","
    )),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type,
      // The grammar doesn't explicitly define it, but parenthesized function
      // types seem to work!
      seq('(', $.function_type, ')'),
      seq("suspend", $.function_type)
    )),

    explicit_delegation: $ => seq(
      choice(
        $.user_type,
        $.function_type
      ),
      optional($._by_delegation_hint),
      "by",
      // Use a restricted expression that doesn't allow trailing lambda calls
      // to avoid ambiguity with class_body in object literals.
      // e.g., `object : Interface by delegate { }` - the `{` should be class_body, not a lambda.
      // If a trailing lambda delegate is truly needed, use parentheses:
      // `object : Interface by (factory { config }) { ... }`
      $._expression_no_trailing_lambda
    ),

    // Expression variant that doesn't allow call expressions with trailing lambdas.
    // This is used in explicit_delegation to prevent ambiguity with class_body.
    _expression_no_trailing_lambda: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression_no_trailing_lambda
    ),

    type_parameters: $ => seq("<", sep1($.type_parameter, ","), optional(","), ">"),

    type_parameter: $ => seq(
      optional($.type_parameter_modifiers),
      alias($.simple_identifier, $.type_identifier),
      optional(seq(":", $._type))
    ),

    type_constraints: $ => prec.right(seq("where", sep1($.type_constraint, ","))),

    type_constraint: $ => seq(
      repeat($.annotation),
      alias($.simple_identifier, $.type_identifier),
      ":",
      $._type
    ),

    // ==========
    // Class members
    // ==========

    // The trailing _semi is optional so that a member can sit directly
    // before the closing brace on the same line, e.g.
    // `object Registry { fun register() {} }`. The external scanner only
    // emits _automatic_semicolon at a newline or before ';'/EOF, so with a
    // mandatory trailing _semi a single-line class body could never
    // complete and the GLR fell back to a bogus infix-expression reading
    // (BrokkAi/tree-sitter-kotlin#14). Same shape as `statements`.
    function_value_parameters: $ => seq(
      "(",
      optional(sep1($._function_value_parameter, ",")),
      optional(","),
      ")"
    ),

    _function_value_parameter: $ => seq(
      optional($.parameter_modifiers),
      $.parameter,
      optional(seq("=", $._expression))
    ),

    function_declaration: $ => prec.right(seq( // TODO
      optional($.modifiers),
      "fun",
      optional($.type_parameters),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      $.simple_identifier,
      $.function_value_parameters,
      optional(seq(":", $._type)),
      optional($.type_constraints),
      optional($.function_body)
    )),

    function_body: $ => choice($._block, seq("=", $._expression)),

    variable_declaration: $ => prec.left(PREC.VAR_DECL, seq(
      // repeat($.annotation), TODO
      $.simple_identifier,
      optional(seq(":", $._type))
    )),

    // Entry in name-based (parenthesized) destructuring — supports optional val/var and renaming
    property_declaration: $ => prec.right(seq(
      optional($.modifiers),
      $.binding_pattern_kind,
      optional($.type_parameters),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      choice($.variable_declaration, $.multi_variable_declaration),
      optional($.type_constraints),
      // Kotlin 2.2 explicit backing field (KEEP-0430) as an alternative to
      // an initializer/delegate: the compiler forbids combining them, and
      // scoping the backing field to the initializer-free form keeps the
      // hint token's blast radius (and the parse tables) small.
      optional(choice(
        seq("=", $._expression),
        $.property_delegate,
        $.backing_field
      )),
      optional(';'),
      optional($._property_accessors)
    )),

    // Keeping the accessor permutations behind one rule prevents the property
    // prefix from being duplicated across both alternatives in the LR tables.
    _property_accessors: $ => prec.right(seq(
      optional($._accessor_start),
      choice(
        seq($.getter, optional(seq(optional($._accessor_start), $.setter))),
        seq($.setter, optional(seq(optional($._accessor_start), $.getter))),
      )
    )),

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.function_type,
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.not_nullable_type
      )
    ),

    user_type: $ => sep1($._simple_user_type, "."),

    _simple_user_type: $ => prec.right(PREC.SIMPLE_USER_TYPE, seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    )),

    statements: $ => seq(
      $._statement,
      repeat(seq($._semi, $._statement)),
      optional($._semi),
    ),

    _statement: $ => choice(
      $._declaration,
      seq(
        repeat(choice($.label, alias($._statement_annotation, $.annotation))),
        choice(
          $.assignment,
          $._loop_statement,
          $._expression
        )
      )
    ),

    // Structurally identical to annotation, but a distinct rule so that
    // the parser state machine does not merge it with the annotation
    // reduction inside modifiers. Without this separation, modifiers
    // (PREC.MODIFIERS) always wins the reduce/reduce conflict and the
    // annotation-expression path is never explored, causing
    // @Annotation("args") (expr) to produce ERROR nodes.
    // Hidden (_) to keep it internal; aliased to $.annotation in _statement
    // so the CST uses a single "annotation" node name in all contexts,
    // matching PSI's unified ANNOTATION_ENTRY.
    control_structure_body: $ => choice($._block, $._statement),

    _block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

    _semi: $ => choice($._automatic_semicolon, $._same_line_boundary),

    _expression: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression
    ),

    // Unary expressions

    call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

    // Generic call expression: call with REQUIRED type_arguments.
    // prec.dynamic(1) tells GLR to prefer the generic-call interpretation
    // (f<T>(x)) over the comparison interpretation (f < T > (x)).
    // Separated from call_expression so the dynamic boost only applies
    // when type_arguments are actually parsed, not for all calls.
    navigation_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.navigation_suffix)),

    prefix_expression: $ => choice(
      prec.right(PREC.PREFIX, seq($._prefix_unary_operator, $._expression)),
      prec.right(seq(choice($.annotation, $.label), $._expression)),
    ),

    as_expression: $ => prec.left(PREC.AS, seq($._expression, $._as_operator, $._type)),

    multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, seq($._expression, $._multiplicative_operator, $._expression)),

    additive_expression: $ => prec.left(PREC.ADDITIVE, seq($._expression, $._additive_operator, $._expression)),

    comparison_expression: $ => prec.left(PREC.COMPARISON, seq($._expression, $._comparison_operator, $._expression)),

    navigation_suffix: $ => seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional($.type_arguments),
      $._member_access_operator,
      choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      )
    ),

    call_suffix: $ => prec.left(seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional($.type_arguments),
      choice(
        prec(PREC.ARGUMENTS, seq(optional($.value_arguments), $.annotated_lambda)),
        $.value_arguments
      )
    )),

    // Call suffix with REQUIRED type_arguments (used by _generic_call_expression)
    annotated_lambda: $ => seq(
      repeat($.annotation),
      optional($.label),
      $.lambda_literal
    ),

    value_arguments: $ => seq(
      "(",
      optional(
        seq(
          sep1($.value_argument, ","),
          optional(","),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($.annotation),
      optional(seq($.simple_identifier, "=")),
      optional("*"),
      $._expression
    ),

    parenthesized_expression: $ => seq("(", $._expression, ")"),

    // https://kotlinlang.org/spec/syntax-and-grammar.html#grammar-rule-collectionLiteral
    string_literal: $ => seq(
      $._string_start,
      repeat(choice($.string_content, $._interpolation)),
      $._string_end,
    ),

    _interpolation: $ => choice(
      seq(alias($._interpolation_expression_start, $.interpolation_expression_start), alias($._expression, $.interpolated_expression), alias("}", $.interpolation_expression_end)),
      seq(alias($._interpolation_identifier_start, $.interpolation_identifier_start), alias($.simple_identifier, $.interpolated_identifier)),
    ),

    lambda_literal: $ => prec(PREC.LAMBDA_LITERAL, seq(
      "{",
      optional(seq(optional($.lambda_parameters), "->")),
      optional($.statements),
      "}"
    )),

    if_expression: $ => prec.right(seq(
      "if",
      "(", field('condition', $._expression), ")",
      choice(
        field('consequence', $.control_structure_body),
        seq(
          optional(field('consequence', $.control_structure_body)),
          optional(";"),
          "else",
          choice(field('alternative', $.control_structure_body), ";")
        ),
        ";"
      )
    )),

    when_subject: $ => seq(
      "(",
      optional(seq(
        repeat($.annotation),
        "val",
        $.variable_declaration,
        "="
      )),
      $._expression,
      ")",
    ),

    when_expression: $ => seq(
      "when",
      optional($.when_subject),
      "{",
      repeat($.when_entry),
      "}"
    ),

    when_entry: $ => seq(
      choice(
        // guard condition not allowed when multiple conditions are given
        seq($.when_condition, repeat1(seq(",", $.when_condition)), optional(",")),
        // optional guard condition and optional trailing comma
        seq($.when_condition, optional($.guard_condition), optional(",")),
        "else"
      ),
      "->",
      $.control_structure_body,
      optional($._semi)
    ),

    when_condition: $ => choice(
      $._expression,
      $.range_test,
      $.type_test,
    ),

    try_expression: $ => prec.right(seq(
      "try",
      $._block,
      choice(
        seq(repeat1($.catch_block), optional($.finally_block)),
        $.finally_block
      )
    )),

    catch_block: $ => seq(
      "catch",
      "(",
      repeat($.annotation),
      $.simple_identifier,
      ":",
      $._type,
      ")",
      $._block,
    ),

    finally_block: $ => seq("finally", $._block),

    _comparison_operator: $ => choice("<", ">", "<=", ">="),

    _additive_operator: $ => choice("+", "-"),

    _multiplicative_operator: $ => choice("*", "/", "%"),

    _as_operator: $ => choice("as", "as?"),

    _prefix_unary_operator: $ => choice("++", "--", "-", "+", "!"),

    _member_access_operator: $ => choice(".", "::", "?."),

    modifiers: $ => prec.dynamic(1, prec.right(seq(
      repeat1(prec.right(PREC.MODIFIERS, choice($.annotation, $._modifier))),
      optional($._modifier_run_hint)
    ))),

    _modifier: $ => choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier,
      $.context_parameters
    ),

    // Context parameters (KEEP-0367): `context(name: Type, ...)` on function
    // and property declarations. Placed in the modifier set like the Kotlin
    // grammar intends (`functionModifier | propertyModifier`), so the usual
    // modifier ordering (`@A context(x: X) override fun f()`) just works.
    // `context` stays a soft keyword: it remains an ordinary identifier
    // everywhere else (BrokkAi/bifrost-dev#2760).
    class_modifier: $ => choice(
      "sealed",
      "annotation",
      "data",
      "inner",
      "value",
    ),

    simple_identifier: $ => choice(
      $._lexical_identifier,
      "expect",
      "data",
      "inner",
      "value",
      "actual",
      "set",
      "get",
      "override",
      "suspend",
      // Batch 1: covered by existing conflict rules (class_modifier, member_modifier, function_modifier)
      "annotation",
      "sealed",
      "lateinit",
      "tailrec",
      "operator",
      "infix",
      "inline",
      "external",
      // Batch 2: visibility modifiers
      "public",
      "private",
      "internal",
      "protected",
      // Batch 3: inheritance modifiers
      "abstract",
      "final",
      "open",
      // Batch 4: property, parameter, reification modifiers
      "const",
      "vararg",
      "noinline",
      "crossinline",
      "reified",
      // Batch 5: annotation use-site targets (no conflict rules needed — disambiguated by ":")
      "field",
      "property",
      "receiver",
      "param",
      "setparam",
      "delegate",
      // Batch 6: structural keywords used as identifiers
      "companion",
      "constructor",
      "init",
      "dynamic",
      "where",
      "catch",
      "finally",
      // Batch 7: enum
      "enum",
      // Batch 9: context parameters (KEEP-0367) — see the conflict rules
      "context",
      // Batch 8: variance modifiers — skipped, causes new break on SoftKeywordsInTypeArguments.kt
      // "out", "in" — too ambiguous in type parameter contexts
    ),

    identifier: $ => sep1($.simple_identifier, "."),

    // Adapted from tree-sitter-java, helps to avoid a conflic with
    // wildcard_import node while being compatible with identifier
    multiline_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),

    // ==========
    // Separators and operations
    // ==========


    // ==========
    // Keywords
    // ==========
